# aTorch-DL24P

./: .gitignore  CLAUDE.md  README.md  SCREENSHOTS.md  TEST_VIEWER_STATUS.md  TODO.md  build.py  migrate_database_add_columns.py  migrate_parameter_names.py  migrate_serial_to_manufactured.py  pyproject.toml  requirements.txt  run_atorch.py  run_load_test_bench.py  run_viewer.py  take_screenshots.py  update_readme_screenshots.py  usb_prepare.py  viewer_main.py
atorch/: __init__.py  config.py  main.py
atorch/alerts/: __init__.py  conditions.py  notifier.py
atorch/automation/: __init__.py  scheduler.py  test_runner.py
atorch/data/: database.py  export.py  models.py
atorch/gui/: automation_panel.py  battery_capacity_panel.py  battery_charger_panel.py  battery_info_widget.py  battery_load_panel.py  cable_resistance_panel.py  charger_panel.py  control_panel.py  database_dialog.py  history_panel.py  main_window.py  placeholder_panel.py  plot_panel.py  power_bank_panel.py  settings_dialog.py  status_panel.py
atorch/protocol/: __init__.py  atorch_protocol.py  device.py
atorch/viewer/: __main__.py  data_viewer_dialog.py  debug_console.py  main_window.py  plot_controls_panel.py  plot_panel_container.py  plotly_plot_panel.py  seaborn_plot_panel.py  test_list_panel.py
load_test_bench/alerts/: conditions.py  notifier.py
load_test_bench/automation/: profiles.py  test_runner.py
load_test_bench/data/: __init__.py  database.py
load_test_bench/gui/: __init__.py  battery_capacity_panel.py  battery_charger_panel.py  battery_load_panel.py  charger_panel.py  control_panel.py  debug_window.py  main_window.py  placeholder_panel.py  plot_panel.py  power_bank_panel.py  settings_dialog.py
load_test_bench/protocol/: atorch_protocol.py  device.py  px100_protocol.py
load_test_bench/viewer/: __init__.py  __main__.py  json_viewer_dialog.py  main_window.py
resources/: default_battery_presets.json
resources/battery_capacity/: presets_camera.json  presets_household.json  presets_test.json
resources/battery_charger/: presets_chargers.json  presets_test.json
resources/battery_load/: presets_test.json
resources/cable_resistance/: presets_cables.json  presets_test.json
resources/charger/: presets_chargers.json  presets_test.json
resources/help/: help.html
resources/icons/: app_icon.icns
resources/power_bank/: presets_power_banks.json  presets_test.json
tests/: __init__.py  test_alerts.py  test_database.py  test_export.py  test_profiles.py  test_protocol.py  test_px100_protocol.py
