[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "load-test-bench"
version = "0.1.0"
description = "Electronic load control, test automation, and logging application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Steve"}
]
keywords = ["electronic-load", "battery-testing", "discharge-test", "usb-hid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyside6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "pyserial>=3.5",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
atorch = "atorch.main:main"

[project.gui-scripts]
atorch-gui = "atorch.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atorch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
